--- a/Three template/package.json
+++ b/Three template/package.json
@@ -49,10 +49,11 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "cannon": "^0.6.2",
+    "cannon-es": "^0.15.1",
     "dat.gui": "^0.7.7",
     "stats.js": "^0.17.0",
     "three": "^0.121.1",
+    "three-to-cannon": "^3.1.0",
     "tweenjs": "^1.0.2"
   }
 }
